ui for profile view and requests view edited

--- a/accounts/templates/profileLayout.html
+++ b/accounts/templates/profileLayout.html
@@ -8,9 +8,11 @@
             <div class="profile-sidebar">
                 <div class="profile-userpic" style="display: flex;justify-content: center;">
                     {% if checker.is_self == False %}
-                    <img src="{% if user.userprofile.avatar %} {{account.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}" class="img-responsive" alt="">
+                    <img src="{% if user.userprofile.avatar %} {{account.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}"
+                        class="img-responsive" alt="">
                     {% else %}
-                    <img src="{% if user.userprofile.avatar %} {{user.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}" class="img-responsive" alt="">
+                    <img src="{% if user.userprofile.avatar %} {{user.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}"
+                        class="img-responsive" alt="">
                     {% endif %}
 
                 </div>
@@ -34,11 +36,15 @@
                     <!-- THEM to YOU -->
                     {% if checker.request_sent == 0 %}
                     <div class="card m-2 p-4">
-                        <div class="d-flex flex-row align-items-center">
-                            <span class="friend-text align-items-center mr-2">Accept Friend Request</span>
+                        <div class="">
+                            <span id="id_confirm_{{account.id}}"  class="confirm-friend-request px-1 m-auto btn post"
+                                onclick='triggerAcceptFriendRequest("{{checker.pending_friend_request_id}}")'><i
+                                    class="fas fa-check-circle "></i> Confirm Request</span>
 
-					        <span id="id_cancel_{{id}}" onclick='triggerDeclineFriendRequest("{{checker.pending_friend_request_id}}")'>cancel</span>
-  					        <span id="id_confirm_{{account.id}}" class="confirm-friend-request material-icons p-1" onclick='triggerAcceptFriendRequest("{{checker.pending_friend_request_id}}")'>check</span>
+                            <span id="id_cancel_{{id}}"  class="decline-friend-request  my-1 btn post "
+                                onclick='triggerDeclineFriendRequest("{{checker.pending_friend_request_id}}")'><i
+                                    class="fas fa-times-circle "></i> Decline Request</span>
+
 
                         </div>
                     </div>
@@ -49,7 +55,8 @@
                     <!-- You sent them a request -->
                     {% if checker.request_sent == 1 %}
                     <div class="profile-userbuttons">
-                        <button class="post btn btn-sm"  id="id_cancel_friend_request_btn"><i class="fas fa-user-plus"></i>
+                        <button class="post btn btn-sm" id="id_cancel_friend_request_btn"><i
+                                class="fas fa-user-plus"></i>
                             Cancel Friend Request
                         </button>
                     </div>
@@ -65,12 +72,12 @@
                     {% endif %}
 
                     {% if checker.is_friend %}
-                    <div class="profile-userbuttons">
-                        <button class="btn btn-secondary " type="button" id="id_friends_toggle">
+                    <div class="profile-userbuttons d-flex flex-row align-items-center m-auto px-2">
+                        <!-- <button class="btn btn-secondary " type="button" id="id_friends_toggle">
                             Friends
-                        </button>
+                        </button> -->
                         <!-- <div class="dropdown-menu"> -->
-                            <button class="dropdown-item" id="id_unfriend_btn">Unfriend</button>
+                        <button class="btn btn-secondary m-auto " id="id_unfriend_btn">Unfriend</button>
                         <!-- </div> -->
                     </div>
                     {% endif %}
@@ -87,29 +94,31 @@
 
                 <!------    SECOND OF THEM SHOULD BE DELETED   --------------->
                 {% if checker.friend_requests %}
-                
-                <div class="card m-2 px-4 pb-4">
-                    <!-- Friend requests -->
-                    <div class="d-flex flex-column pt-4">
-                        <a href="{% url 'friend:friend-requests' user_id=user.id %}">
-                            <div class="d-flex flex-row align-items-center justify-content-center icon-container">
-                                <span class="material-icons mr-2 person-add-icon">person_add</span><span
-                                    class="friend-text">Friend Requests ({{checker.friend_requests|length}})</span>
-                            </div>
-                        </a>
-                    </div>
+
+
+                <!-- Friend requests -->
+                <div class="d-flex flex-row align-items-center m-2 px-4">
+                    <a href="{% url 'friend:friend-requests' user_id=user.id %}">
+                        <div class="d-flex flex-row align-items-center justify-content-center icon-container"><span
+                                class="friend-text btn post"><i class="fas fa-user-plus"></i> Friend Requests
+                                ({{checker.friend_requests|length}})</span>
+                        </div>
+                    </a>
                 </div>
-                
+
+
+
                 {% endif %}
                 <!------->
 
                 {% if checker.is_friend %}
-                <div class="d-flex flex-row align-items-center btn btn-primary m-2 px-4">
-                    <span class="material-icons m-auto">
-                        message
-                    </span>
-                    <span class="message-btn-text m-auto pl-2">Message</span>
-                </div>
+                <a href="/messages/?id={{account.id}}">
+                   
+                    <div class="d-flex flex-row align-items-center justify-content-center icon-container m-auto px-2">
+                        <span class="post btn friend-text "><i class="far fa-envelope"></i> Message</span>
+
+                   </div>
+                </a>
                 {% endif %}
                 <!----------------------------------------------------------------------------------------------------------------------------->
                 <div class="profile-usermenu">
@@ -136,6 +145,11 @@
                                 <i class="fas fa-user"></i>
                                 About </a>
                         </li>
+                        <li class="{% active_link 'about' 'active' strict=True %}">
+                            <a href="/profile/{{user.id}}/edit">
+                                <i class="fas fa-pen"></i>
+                                Edit Profile </a>
+                        </li>
 
                         {% endif %}
 
@@ -159,20 +173,20 @@
 
     }
 
-    function onFriendRequestAccepted(){
-		location.reload();
-	}
-    function uiReload(){
-		location.reload();
-	}
+    function onFriendRequestAccepted() {
+        location.reload();
+    }
+    function uiReload() {
+        location.reload();
+    }
 
-    function onFriendRequestCancelled(){
-		location.reload();
-	}
+    function onFriendRequestCancelled() {
+        location.reload();
+    }
 
-    function onFriendRequestDeclined(){
-		location.reload();
-	}
+    function onFriendRequestDeclined() {
+        location.reload();
+    }
 
     var sendFriendRequestBtn = document.getElementById("id_send_friend_request_btn")
     if (sendFriendRequestBtn != null) {
@@ -187,29 +201,29 @@
         })
     }
 
-    function triggerAcceptFriendRequest(friend_request_id){
-		acceptFriendRequest(friend_request_id, onFriendRequestAccepted)
-	}
+    function triggerAcceptFriendRequest(friend_request_id) {
+        acceptFriendRequest(friend_request_id, onFriendRequestAccepted)
+    }
 
     var cancelFriendRequestBtn = document.getElementById("id_cancel_friend_request_btn")
-	if(cancelFriendRequestBtn != null){
-		cancelFriendRequestBtn.addEventListener("click", function(){
-			cancelFriendRequest("{{account.id}}", onFriendRequestCancelled)
-		})
-	}
+    if (cancelFriendRequestBtn != null) {
+        cancelFriendRequestBtn.addEventListener("click", function () {
+            cancelFriendRequest("{{account.id}}", onFriendRequestCancelled)
+        })
+    }
 
 
-    
-    function triggerDeclineFriendRequest(friend_request_id){
+
+    function triggerDeclineFriendRequest(friend_request_id) {
         alert(friend_request_id)
         declineFriendRequest(friend_request_id, onFriendRequestDeclined)
     }
 
-    
 
-    
 
- 
+
+
+
 
 </script>
 {% include 'friend/snippets/send_friend_request.html' %}
