add url for messages in friends list

--- a/friend/templates/friend_list.html
+++ b/friend/templates/friend_list.html
@@ -51,7 +51,7 @@
 						<a class="profile-link" style="display: inline;" >
 							<h4 class="card-title">{{friend.0.username|truncatechars:50}}  {{friend.0.last_name|truncatechars:50}}</h4>
 						</a>
-						<button class="post btn btn-sm"><a href="#">Send a Message</a></button>
+						<button class="post btn btn-sm"><a href="/messages/?id={{friend.0.id}}">Send a Message</a></button>
 						
 					</div>
 				</a>
