--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -89,9 +89,21 @@
                 <div class="card-footer text-muted d-flex">
                     <p style="text-align:left;color:gray;font-size:12px;margin:0px">{{post.created_at}}</p>
                     <div style="text-align:right;width:80%">
-                    <a href="{% url "view" post.id%}" style="color:#e44d3a;"><i class="fa fa-comment mx-4 fa-lg " aria-hidden="true"></i></a>
-                    <a  href="#" style="color:#e44d3a;"><i class="fa fa-thumbs-up mx-4 fa-lg " aria-hidden="true"></i></a>
-                   </div>
+                    <a href="{% url "view" post.id%}" style="color:#e44d3a;" ><i class="fa fa-comment mx-4 fa-lg " aria-hidden="true"></i></a>
+                    <!-- <a  href="#" style="color:#e44d3a;"><i class="fa fa-thumbs-up mx-4 fa-lg " aria-hidden="true"></i></a> -->
+                    <form action="{% url "like-post"%}"  method="POST" style="display: inline-block;">
+                        {% csrf_token %}
+                        <input type="hidden" name="post_id" value="{{post.id}}">
+                       
+                        {% if request.user not in post.liked.all %}
+                        <button type="submit" style="background-color:#e44d3a;color:whitesmoke;width: 58px;height: 30px;line-height: 10px;font-size: medium;border-radius: 30px;">Like </button>
+                        {% else %}
+                        <button type="submit" style="background-color:#e47668;color:whitesmoke;width: 70px;height: 30px;line-height: 10px;font-size: medium;border-radius: 30px;">Unlike </button>
+                        {% endif %}
+                       
+                    </form>
+                    <strong >{{ post.liked.all.count }}likes</strong>
+                </div>
                 </div>
                 </div>
 
