--- a/msgnotifications/templates/index.html
+++ b/msgnotifications/templates/index.html
@@ -75,7 +75,7 @@
                     <div class="d-flex justify-content-center align-items-center" id="chatdiv"> 
                 {% endif %}                            
                         <div class="mx-2">{{friend.username}}</div>
-                       <img class="  m-1 rounded-circle"  src="{% static 'images/exPP3.png' %}">
+                       <img class="  m-1 rounded-circle"  src="{% if friend.userprofile.avatar %}{{friend.userprofile.avatar.url}} {% else %} {% static 'images/avatars/profile.jpeg' %} {% endif %}">
                     </div>
                      </a> 
                 
