--- a/groups/templates/groups/show.html
+++ b/groups/templates/groups/show.html
@@ -1,7 +1,7 @@
 {% extends "layout.html"%}
 
 {% block body %}
-<div style=" background-image: {% if group.cover != '' %} url({{group.cover.url}}){% else %}url(/images/Default.jpg){% endif %};width:100%%;height:300px;background-size: 100% 300px;cursor: pointer;background-repeat: no-repeat;">
+<div style=" background-image: {% if group.cover  %} url({{group.cover.url}}){% else %}url(/images/Default.jpg){% endif %};width:100%%;height:300px;background-size: 100% 300px;cursor: pointer;background-repeat: no-repeat;">
 </div>
 <div class="d-flex justify-content-between" style="background-color:#e44d3a; padding:10px;color: white;">
   <div class="" >
