--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -2,43 +2,99 @@
 
 {% block content %}
 <div class="profile-content">
+	
+	
+                    
+		
+			
+		
+	
+	
 	<h5>Feed Posts</h5>
+	{% if checker.is_self %}
+	<div class="post-topbar">
+	<form action='{% url "index" %}' method="post" enctype="multipart/form-data" >
+		{% csrf_token %}
+		<div class="row">    
+			<div class="col-10">
+				{{ form.as_p}}
+				<input class="post_input " name="content" placeholder="  What's in your mind?" />
+				<input class="mt-2 " type="file" name="image"/>
 
-	{% for post in posts %}
-	<hr>
-
-	<div class="card text-center">
-		<div class="card-header">
-			<div class="row">
-				<p class="col-5 tex-left "><span style="color:#e44d3a;">Post from:</span> {{post.owner}}</p>
-				<div class="col-2"></div>
-				<div class="col-5">
-					<a href="{% url " view" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-eye"
-							aria-hidden="true"></i></a>
-					<a href="{% url " edit" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-pen"
-							aria-hidden="true"></i></a>
-					<a href="{% url " delete" post.id%}" style="color:grey;" class="mx-3"><i
-							class="fa fa-trash" aria-hidden="true"></i></a>
-				</div>
+			
 			</div>
-		</div>
-		<div class="card-body">
-			<h5 class="card-text">{{post.content}}</h5>
-		</div>
-		<div class="card-footer text-muted d-flex">
-			<p>{{post.created_at}}</p>
-			<div style="width:300px"></div>
-			<a href="{% url " view" post.id%}" style="color:#e44d3a;"><i class="fa fa-comment mx-4 fa-lg "
-					aria-hidden="true"></i></a>
-			<a href="#" style="color:#e44d3a;"><i class="fa fa-thumbs-up mx-4 fa-lg "
-					aria-hidden="true"></i></a>
+			<div class="col-2">
+				<button class="post btn" type="submit" >Post</button>
+			</div>   
+		</div> 
+	</form>
+</div>
+	{% endif %}
+	
+	{% if posts %}
+	{% for post in posts %}
+                <hr>
+                <div class="card text-center">
+                <div class="card-header">
+                    <div class="row" style="text-align:left;">
+                        <p class="col-7 tex-left "><span style="color:#e44d3a;">Posted by:</span> {{post.owner}}
+                        {% if post.group != null %}
+                            <span style="color:#e44d3a;"> >> from group:</span> {{post.group }}
+                        {% endif %}
+                        </p>
+                        
+                        <div class="col-5"style="text-align:right;">
+                            <a href="{% url "view" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-eye" aria-hidden="true"></i></a>
+                            {% if post.owner == request.user %}
+                            <a href="{% url "edit" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-pen" aria-hidden="true"></i></a>
+                            <a href="{% url "delete" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                            {% endif %}
+                        </div>
+                       
+                    </div>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-text">{{post.content}}</h5>
+                         {% if post.image != null and  post.image != ""%}
+                            <img src="/images/{{post.image }}" width="400px"/>
+                        {% endif %}
 
-		</div>
-	</div>
+                </div>
+                <div class="card-footer text-muted d-flex">
+                    <p style="text-align:left;color:gray;font-size:12px;margin:0px">{{post.created_at}}</p>
+                    <div style="text-align:right;width:80%">
+                    <a href="{% url "view" post.id%}" style="color:#e44d3a;" ><i class="fa fa-comment mx-4 fa-lg " aria-hidden="true"></i></a>
+                    <!-- <a  href="#" style="color:#e44d3a;"><i class="fa fa-thumbs-up mx-4 fa-lg " aria-hidden="true"></i></a> -->
+                    <form action="{% url "like-post"%}"  method="POST" style="display: inline-block;">
+                        {% csrf_token %}
+                        <input type="hidden" name="post_id" value="{{post.id}}">
+                       
+                        {% if request.user not in post.liked.all %}
+                        <button type="submit" style="background-color:#e44d3a;color:whitesmoke;width: 58px;height: 30px;line-height: 10px;font-size: medium;border-radius: 30px;">Like </button>
+                        {% else %}
+                        <button type="submit" style="background-color:#e47668;color:whitesmoke;width: 70px;height: 30px;line-height: 10px;font-size: medium;border-radius: 30px;">Unlike </button>
+                        {% endif %}
+                       
+                    </form>
+                    <strong >{{ post.liked.all.count }}likes</strong>
+                </div>
+                </div>
+                </div>
 
-	<hr>
+                <hr>
 
-	{% endfor %}
+                {% endfor %}
+				{% elif not check.is_self %}
+				<h3>You have no posts.</h3>
+				<h4>Add a post now.</h4>
+				
+                 
 
+				{% elif not checker.is_friend %}
+				<h3>You can't view this user's post.</h3>
+				<h4>Add him as friend.</h4>
+				{% else %}
+				<h3>This user has not posted anything yet.</h3>
+				{% endif %}
 </div>
 {% endblock %}
