--- a/accounts/templates/profileLayout.html
+++ b/accounts/templates/profileLayout.html
@@ -8,7 +8,7 @@
             <div class="profile-sidebar">
                 <div class="profile-userpic" style="display: flex;justify-content: center;">
                     {% if checker.is_self == False %}
-                    <img src="{% if user.userprofile.avatar %} {{account.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}"
+                    <img src="{% if account.userprofile.avatar %} {{account.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}"
                         class="img-responsive" alt="">
                     {% else %}
                     <img src="{% if user.userprofile.avatar %} {{user.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}"
