--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -40,7 +40,7 @@
             <div class="post-topbar">
                 <form method="post" action="{% url "signup" %}" enctype="multipart/form-data" >
                     {% csrf_token %}
-                    <table>
+                    <table class="table table-bordered table-hover">
                     {{ form}}
                     {{ profile_form.as_table }}
                         <tr>
