posts ordered by latest

--- a/friend/templates/friend/friend_requests.html
+++ b/friend/templates/friend/friend_requests.html
@@ -25,7 +25,7 @@
 			</a>
 			<div class="d-flex flex-row card-right flex-grow-1 justify-content-end mx-2">
 	  			<span class="decline-friend-request" onclick='triggerDeclineFriendRequest("{{request.id}}")'><i class="fas fa-times-circle fa-2x"></i></span>
-	  			<span class="confirm-friend-request" onclick='triggerAcceptFriendRequest("{{request.id}}")'><i class="fas fa-check-circle fa-2x"></i></span>
+	  			<span Fclass="confirm-friend-request" onclick='triggerAcceptFriendRequest("{{request.id}}")'><i class="fas fa-check-circle fa-2x"></i></span>
 			</div>
 		</div>
 		{% if forloop.counter|divisibleby:2 %}
