--- a/msgnotifications/templates/notificationIndex.html
+++ b/msgnotifications/templates/notificationIndex.html
@@ -15,7 +15,7 @@
           
                {% if notification.notifyType == "postView_comment"%}
                     <a href="{% url "view" notification.instance_id%}" style="color:black;">
-                    <div class="mycard d-flex justify-content-center align-items-center" id="chatdiv" >
+                    <div class="mycard d-flex justify-content-end align-items-center" id="chatdiv" >
                         <p style="text-align:left;color:gray;font-size:12px;margin:0px" class="mr-4 mt-5">{{ notification.created_at}}</p>
                         <div class="mx-2">{{notification.text}}</div>
                         
@@ -26,7 +26,7 @@
                 {% endif %}   
                 {% if notification.notifyType == "groupView"%}
                     <a href="{% url "show" notification.instance_id%}" style="color:black;">
-                    <div class="mycard d-flex justify-content-center align-items-center" id="chatdiv">
+                    <div class="mycard d-flex justify-content-end align-items-center" id="chatdiv">
                         <p style="text-align:left;color:gray;font-size:12px;margin:0px" class="mr-4 mt-5">{{ notification.created_at}}</p>
                         <div class="mx-2">{{notification.text}}</div>
                         
@@ -37,7 +37,7 @@
                 {% endif %}  
                 {% if notification.notifyType == "profileView"%}
                     <a href="/profile/{{notification.instance_id}}" style="color:black;">
-                    <div class="mycard d-flex justify-content-center align-items-center" id="chatdiv">
+                    <div class="mycard d-flex justify-content-end align-items-center" id="chatdiv">
                         <p style="text-align:left;color:gray;font-size:12px;margin:0px" class="mr-4 mt-5">{{ notification.created_at}}</p>
                         <div class="mx-2">{{notification.text}}</div>
                         
@@ -48,7 +48,7 @@
                 {% endif %}
                 {% if notification.notifyType == "postView_like"%}
                     <a href="{% url "view" notification.instance_id%}" style="color:black;">
-                    <div class="mycard d-flex justify-content-center align-items-center" id="chatdiv">
+                    <div class="mycard d-flex justify-content-end align-items-center" id="chatdiv">
                         <p style="text-align:left;color:gray;font-size:12px;margin:0px" class="mr-4 mt-5">{{ notification.created_at}}</p>
                         <div class="mx-2">{{notification.text}}</div>
                         
