--- a/groups/templates/groups/show.html
+++ b/groups/templates/groups/show.html
@@ -66,7 +66,7 @@
                         <div class="row">    
                             <div class="col-10">
                                 {{ form.as_p}}
-                                <input class="post_input " name="content" placeholder="What's in your mind?" />
+                                <textarea class="post_input " name="content" placeholder="What's in your mind?"></textarea>
                             
                             </div>
                             <div class="col-2">
