--- a/msgnotifications/templates/index.html
+++ b/msgnotifications/templates/index.html
@@ -9,7 +9,7 @@
 
                 <h6>Chatting with<span style="color:#e44d3a;"> :{{ msgto}}</span></h6>
                 <hr>
-                <div style="height:400px;overflow-y:scroll">
+                <div style="height:450px;overflow-y:scroll">
                     {% for message in messages %}
                     <div class="card text-center">
                         {% if request.user == message.sender %}
@@ -23,8 +23,8 @@
 
                         {% elif request.user == message.reciever %}
                         <div class="card-body" style="padding-bottom:0px">
-                            <h6 class="card-text" style="text-align:left;"><span style="color:#e44d3a;">{{
-                                    message.sender}}: </span>{{ message.text}}</h6>
+                            <h6 class="card-text" style="text-align:left;"><span style="color:#e44d3a;">
+                            {{message.sender}}: </span>{{ message.text}}</h6>
                             <p style="text-align:right;color:gray;font-size:12px;margin:0px">{{ message.created_at}}</p>
 
                         </div>
@@ -63,7 +63,7 @@
                 </form>
             </div>
 
-            <div class="mycard" style="height:500px;overflow-y:scroll">
+            <div class="mycard" style="height:560px;overflow-y:scroll">
                 <h2>Chats</h2>
 
                 {% for friend in friends %}
@@ -80,7 +80,7 @@
                                 {% endif %}
                                 <div class="mx-2 ">{{friend.username}}</div>
 
-                                <img class="  m-1 rounded-circle img-thumbnail"
+                                <img class="  m-1 rounded-circle "
                                     src="{% if friend.userprofile.avatar %}{{friend.userprofile.avatar.url}} {% else %} {% static 'images/avatars/profile.jpeg' %} {% endif %}">
                             </div>
                         </a>
