--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -46,7 +46,7 @@
                         <div class="row">    
                             <div class="col-10">
                                 {{ form.as_p}}
-                                <input class="post_input " name="content" placeholder="  What's in your mind?" />
+                                <textarea class="post_input " name="content" placeholder="  What's in your mind?" ></textarea>
                                 <input class="mt-2 " type="file" name="image"/>
                             </div>
                             <div class="col-2">
@@ -67,7 +67,7 @@
                 <div class="card text-center">
                 <div class="card-header">
                     <div class="row" style="text-align:left;">
-                        <p class="col-7 tex-left "><span style="color:#e44d3a;">Posted by:</span> {{post.owner}}
+                        <p class="col-7 tex-left "><span style="color:#e44d3a;">Posted by:</span> <a href="/profile/{{post.owner.id}}" style="color:black">{{post.owner}}</a>
                         {% if post.group != null %}
                             <span style="color:#e44d3a;"> >> from group:</span> {{post.group }}
                         {% endif %}
