handled if user requested an unavailable page and bug fixes

--- a/friend/templates/friend/snippets/decline_friend_request.html
+++ b/friend/templates/friend/snippets/decline_friend_request.html
@@ -12,7 +12,7 @@
 
                 }
                 else if(data.response == null){
-                    alert(data.response)
+                    // alert(data.response)
                 }
             },
             error:function(data){
