--- a/friend/templates/friend_list.html
+++ b/friend/templates/friend_list.html
@@ -75,7 +75,7 @@
 							{{friend.last_name|truncatechars:50}}</h4>
 					</a>
 					<div class="d-flex justify-content-space-beween align-items-center">
-					<a href="/messages/?id={{friend.0.id}}" class="post btn btn-sm">Send a Message</a>
+					<a href="/messages/?id={{friend.id}}" class="post btn btn-sm">Send a Message</a>
 					</div>
 				</div>
 			</a>
