--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
         </div>
    
         <div class="col-lg-5 col-sm-9 col-xs-8 d-flex align-items-center justify-content-around ">
-            <a  href="/posts/" id="navLink"><i class="fa fa-home" aria-hidden="true" ></i><p>Home</p></a>
+            <a  href="/" id="navLink"><i class="fa fa-home" aria-hidden="true" ></i><p>Home</p></a>
             <a  href="/groups/" id="navLink"><i class="fa fa-users" aria-hidden="true"></i><p>groups</p></a>
             <a  href="{% url 'friend:list' %}" id="navLink"><i class="fa fa-user-friends" aria-hidden="true"></i><p>Friends</p></a>
             <a  href="/messages" id="navLink"><i class="fa fa-comments" aria-hidden="true"></i><p>Messages</p></a>
