--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
     {% load static  %}
+    {% load crispy_forms_tags %}
     <html>
     <head>
     <title>Social Media</title>
@@ -40,16 +41,28 @@
             <div class="post-topbar">
                 <form method="post" action="{% url "signup" %}" enctype="multipart/form-data" >
                     {% csrf_token %}
-                    <table class="table table-bordered table-hover">
-                    {{ form}}
-                    {{ profile_form.as_table }}
-                        <tr>
-                        <td></td>
-                        <td><input type="submit" name="submit" value="Register" /></td>
+                    <!-- <table class="table table-bordered table-hover"> -->
+                    {{ form.username|as_crispy_field}}
+                    {{ profile_form.email|as_crispy_field }}
+                    {{ profile_form.first_name|as_crispy_field}}
+                    {{ profile_form.last_name|as_crispy_field}}
+                    {{ form.password1|as_crispy_field}}
+                    {{ form.password2|as_crispy_field}}
+                    {{ profile_form.avatar|as_crispy_field}}
+                    {{ profile_form.birthdate|as_crispy_field}}
+                    {{ profile_form.country|as_crispy_field}}
+                    {{ profile_form.about|as_crispy_field}}
+     
+                        <!-- <tr>
+                        <td></td> -->
+                        <!-- <td> -->
+                            <input type="submit" name="submit" value="Register" />
+                        <!-- </td>
                     </tr>
-                    </table>
+                    </table> -->
                 </form>
             </div>
+            <p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
 
 
         </div>
