--- a/templates/unauthorized.html
+++ b/templates/unauthorized.html
@@ -5,8 +5,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center d-flex-column justify-content-center ">
-                    <span class="display-1 d-block">404</span>
-                    <div class="mb-4 lead ">The page you are looking for was not found.</div>
+                    <span class="display-1 d-block">Unauthorized!</span>
+                    <div class="mb-4 lead ">You are trying to enter a page you're not authorized to enter!</div>
                     <a href="{% url 'index' %}" style="width: 50%; margin-left: 25%;" class="btn post">Back to Home</a>
                 </div>
             </div>
